# rust-practice

practice-collection/async/future-1/: Cargo.toml
practice-collection/async/future-1/src/: main.rs
practice-collection/async/future-duration/: Cargo.toml
practice-collection/async/future-duration/src/: main.rs
practice-collection/common_prefix_count/: Cargo.toml
practice-collection/common_prefix_count/src/: main.rs
practice-collection/concurrency/mpsc-channel-1/: Cargo.toml
practice-collection/file_buffer_copy/: Cargo.toml
practice-collection/file_buffer_copy/src/: main  main.rs
practice-collection/file_fs_copy/src/: main  main.rs
practice-collection/file_operation/: Cargo.toml  data.txt
practice-collection/file_operation/src/: main.rs
practice-collection/lifecycle/generic_ref_lifecycle/: Cargo.toml
practice-collection/pin/swap-no-pin/: Cargo.toml
practice-collection/pin/swap-pin-on-heap-1/: Cargo.toml
practice-collection/pin/swap-pin-on-heap-2/: Cargo.toml
practice-collection/pin/swap-pin-on-stack/: Cargo.toml
practice-collection/singleton/singleton_lazy_static/: Cargo.toml
practice-collection/singleton/singleton_unsafe/: Cargo.toml
practice-collection/sum_from_iter/: Cargo.toml
practice-collection/type_name/: Cargo.toml
rust-book/chapter_3_guessing_game/: Cargo.toml
rust-book/chapter_4_23_closure_1/: Cargo.toml
rust-book/chapter_4_24_ufcs_1/: Cargo.toml
rust-book/chapter_4_30_associated_types/: Cargo.toml
rust-book/chapter_4_32_operator_1/: Cargo.toml
rust-book/chapter_5_6_concurrency_1/: Cargo.toml
(+18 files in other folders)
