[package]
name = "future-1"
version = "0.1.0"
authors = ["costa-wang <3162284013@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.4", features = ["executor", "thread-pool"] }
once_cell = { version = "1.3.1"}
crossbeam = { version = "0.7.3"}
async-task = { version = "3.0.0"}


